@@ -1,5 +1,16 @@
 2008-02-26  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-main.c:
+	Don't use custom icons for the playing/ripping status icons, but
+	the g-i-t stock icons (#404546, Michael Monreal).
+	
+	* data/sj-play.png:
+	* data/sj-record.png:
+	* data/Makefile.am:
+	Remove.
+
+2008-02-26  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* NEWS:
 	Version 2.21.92.
